Ter_fix_name_Frame2
ถ้าเอ๋อก็โรลแบ็คให้ด้วยย555555

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Project/build/
+Project/src/Login/Test.form
+Project/src/Login/Test.java
+Project/src/Login/Test2.form
+Project/src/Login/Test2.java
