Final ใส่ชื่อร้านกับเอาหมากับปลาออก

--- a/Project/nbproject/private/private.properties
+++ b/Project/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 project.ui-design_008=C:\\Users\\Gide\\Downloads\\java-ui-008-main
-user.properties.file=C:\\Users\\acer\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\asus\\AppData\\Roaming\\NetBeans\\14\\build.properties
