--- a/Project/nbproject/private/private.properties
+++ b/Project/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 project.ui-design_008=C:\\Users\\Gide\\Downloads\\java-ui-008-main
 user.properties.file=C:\\Users\\asus\\AppData\\Roaming\\NetBeans\\14\\build.properties
